--- a/web/src/main/resources/vm/java/controller.vm
+++ b/web/src/main/resources/vm/java/controller.vm
@@ -14,6 +14,7 @@ import io.boncray.web.generator.supperClass.service.BaseService;
 import io.boncray.web.generator.supperClass.controller.BaseController;
 import ${context.basePackage}.mode.domain${moduleName}.${table.className};
 import ${context.basePackage}.mode.query${moduleName}.${table.className}Query;
+import io.swagger.annotations.Api;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -26,6 +27,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
  * @version 1.0
  * @date ${date}
  */
+@Api(tags = "${table.comment}")
 @RestController
 @RequestMapping("/${baseMapping}")
 public class ${table.className}Controller extends BaseController<${table.className}, ${table.className}Query> {
