修改代码生成器模板、修改枚举反序列化、增加异常类

--- a/code-generate/src/main/resources/vm/java/controller.vm
+++ b/code-generate/src/main/resources/vm/java/controller.vm
@@ -31,7 +31,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 @Api(tags = "${table.comment}")
 @RestController
 @RequestMapping("/${baseMapping}")
-public class ${table.className}Controller extends BaseController<${table.className}, ${table.className}Query> {
+public class ${table.className}Controller extends BaseController<${table.className}, ${table.className}Query, ${table.className}PageQuery> {
 
     @Autowired
     private ${serviceClass} ${serviceName};
